--- a/ADSAP/templates/permisos/permisos_confirmacion.html
+++ b/ADSAP/templates/permisos/permisos_confirmacion.html
@@ -58,7 +58,7 @@
     <p class="Instrucciones">
       Tu solicitud ha sido enviada exitosamente. En breve, un administrador revisará tu solicitud y te notificará si ha
       sido aprobada o rechazada.
-      Ahora puedes regresar a la pagina de vacaciones y ver el estado de tu solicitud.
+      Ahora puedes regresar a la pagina de permisos y ver el estado de tu solicitud.
     </p>
     <a href="{% url 'core:permisos' %}" class="btn btn-primary w-100 py-2">Regresar</a>
   </div>
