--- a/ADSAP/templates/permisos/permisos.html
+++ b/ADSAP/templates/permisos/permisos.html
@@ -64,7 +64,7 @@
   }
 
   .btn1 {
-    margin-left: 75%;
+    margin-left: 78%;
     margin-bottom: 15px;
   }
 
@@ -75,6 +75,18 @@
   .vacaciones {
     height: 100px;
     width: 100%;
+  }
+
+  .Dias {
+    text-align: left;
+    position: absolute;
+  }
+
+  .Motivo {
+    margin-left: 45%;
+    margin-bottom: 15px;
+    font-size: 1.3em;
+    font-family: 'ZCOOL QingKe HuangYou';
   }
 </style>
 
@@ -98,19 +110,19 @@
       </form>
     </div>
     <div>
-        {% for solicitud in solicitudes %}
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3 vacaciones" aria-current="true">
-            <img src="https://cdn-icons-png.flaticon.com/256/4343/4343430.png">
-            <div>
-                <p class="mb-0">Motivo: {{ solicitud.tipo }} </p>
-                <p class="mb-0 fecha">Periodo: {{ solicitud.fecha_inicio }} al {{ solicitud.fecha_fin }} </p>
-                <p class="mb-0 opacity-75 fecha"> Días solicitados: {{ solicitud.dias_solicitados }} </p>
-            </div>
-          </a>
-          <a href="{% url 'core:permisos_estado' solicitud.id %}" class="btn btn-primary py-2">Estado Solicitud</a>
-        </div>
-        {% endfor %}
+      {% for solicitud in solicitudes %}
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3 vacaciones" aria-current="true">
+          <img src="https://cdn-icons-png.flaticon.com/256/2284/2284211.png">
+          <div>
+            <p class="mb-0 fecha">Periodo: {{ solicitud.fecha_inicio }} al {{ solicitud.fecha_fin }} </p>
+            <p class="mb-0 opacity-75 fecha Dias"> Días solicitados: {{ solicitud.dias_solicitados }} </p>
+            <p class="mb-0 Motivo">Motivo: {{ solicitud.tipo }} </p>
+          </div>
+        </a>
+        <a href="{% url 'core:permisos_estado' solicitud.id %}" class="btn btn-primary py-2">Estado Solicitud</a>
+      </div>
+      {% endfor %}
     </div>
   </div>
 </body>
