--- a/ADSAP/templates/permisos/permisos_eliminacion.html
+++ b/ADSAP/templates/permisos/permisos_eliminacion.html
@@ -1,26 +1,95 @@
 {% extends 'base/base.html'%}
-
-{% block title %} ELIMINACION DE PERMISO {% endblock title %}
-
+{% load static %}
+{% block title %}ELiminar solicitud de permiso{% endblock title %}
 {% block content %}
+<style>
+  .background {
+    background-color: #fff;
+  }
 
-    
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 150px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 700px;
+    border-radius: 20px;
+    margin-left: 450px;
+    position: relative;
+    display: block;
+  }
 
-    {% if not estado_solicitud.estado == "Aceptado" %}  
-        <h1>ELIMINACION DE PERMISOS </h1>
-        <h2>¿Estás seguro de que deseas eliminar la solicitud de permiso?
-            Esto cancelara la solicitud automaticamente y no podra ser recuperada.
-        </h2>
-        <form action="" method="post" class="form">
-            {% csrf_token %}
-                <button type="submit" class="btn btn-outline-danger form-control">Eliminar</button>   
-        </form>
-        <a href="{% url 'core:vacaciones' %}" class="btn btn-primary">Regresar</a>
+  img {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    width: 200px;
+    display: block;
+    padding-bottom: 10px;
+  }
+
+  .Tittle {
+    font-size: 2em;
+    font-weight: bold;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .Instrucciones {
+    font-size: 1.5em;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: justify;
+    margin-bottom: 25px;
+  }
+
+  .btn {
+    background-color: #003366;
+    border-color: #003366;
+    font-size: 1.5em;
+    font-weight: bold;
+    font-family: 'ZCOOL QingKe HuangYou';
+  }
+
+  .BtnRegresar {
+    position: absolute;
+    margin-left: 10%;
+  }
+
+  .BtnCancelar {
+    background-color: red;
+    border-color: red;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    margin-left: 65%;
+    position: absolute;
+  }
+
+  .BtnCancelar:hover {
+    background-color: rgb(141, 0, 0);
+  }
+</style>
+
+<body class="background">
+
+  <div class=Contenedor>
+    {% if not estado_solicitud.estado == "Aceptado" %}
+    <img src="https://cdn-icons-png.flaticon.com/256/3221/3221845.png">
+    <p class="Tittle">¿Estás seguro de que deseas eliminar la solicitud de permiso?</p>
+    <p class="Instrucciones">Esto cancelará la solicitud automáticamente y no podrá ser recuperada.</p>
+    <form action="" method="post" class="form">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-primary BtnCancelar">Eliminar</button>
+      <a href="{% url 'core:permisos' %}" class="btn btn-primary BtnRegresar">Regresar</a>
+    </form>
     {% else %}
-        <p>NO PUEDES CANCELAR TU SOLICITUD PORQUE YA SE ACEPTO</p>
+    <img src="https://cdn-icons-png.flaticon.com/256/1828/1828665.png"><br>
+    <p class="Tittle">Tu solicitud no puede ser cancelada debido a que ya ha sido acceptada. </p><br>
+    <a href="{% url 'core:permisos' %}" class="btn btn-primary w-100 py-2">Regresar</a>
     {% endif %}
-
-
-
-    
+  </div>
+</body>
 {% endblock content %}
