--- a/ADSAP/templates/vacaciones/vacaciones_eliminacion.html
+++ b/ADSAP/templates/vacaciones/vacaciones_eliminacion.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html'%}
 {% load static %}
-{% block title %}Confirmar eliminación{% endblock title %}
+{% block title %}Eliminar solicitud de vacaciones{% endblock title %}
 {% block content %}
 <style>
   .background {
@@ -16,6 +16,7 @@
     width: 700px;
     border-radius: 20px;
     margin-left: 450px;
+    position: relative;
     display: block;
   }
 
@@ -41,31 +42,53 @@
     font-size: 1.5em;
     font-family: 'ZCOOL QingKe HuangYou';
     text-align: justify;
+    margin-bottom: 25px;
   }
 
   .btn {
     background-color: #003366;
     border-color: #003366;
     font-size: 1.5em;
+    font-weight: bold;
+    font-family: 'ZCOOL QingKe HuangYou';
+  }
+
+  .BtnRegresar {
+    position: absolute;
+    margin-left: 10%;
+  }
+
+  .BtnCancelar {
+    background-color: red;
+    border-color: red;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    margin-left: 65%;
+    position: absolute;
+  }
+
+  .BtnCancelar:hover {
+    background-color: rgb(141, 0, 0);
   }
 </style>
 
 <body class="background">
 
   <div class=Contenedor>
-
     {% if not estado_solicitud.estado == "Aceptado" %}
-    <h1>ELIMINACION DE VACACIONES </h1>
-    <h2>¿Estás seguro de que deseas eliminar la solicitud de vacaciones?
-      Esto cancelara la solicitud automaticamente y no podra ser recuperada.
-    </h2>
+    <img src="https://cdn-icons-png.flaticon.com/256/3221/3221845.png">
+    <p class="Tittle">¿Estás seguro de que deseas eliminar la solicitud de vacaciones?</p>
+    <p class="Instrucciones">Esto cancelará la solicitud automáticamente y no podrá ser recuperada.</p>
     <form action="" method="post" class="form">
       {% csrf_token %}
-      <button type="submit" class="btn btn-outline-danger form-control">Eliminar</button>
+      <button type="submit" class="btn btn-primary BtnCancelar">Eliminar</button>
+      <a href="{% url 'core:vacaciones' %}" class="btn btn-primary BtnRegresar">Regresar</a>
     </form>
-    <a href="{% url 'core:vacaciones' %}" class="btn btn-primary">Regresar</a>
     {% else %}
-    <p>NO PUEDES CANCELAR TU SOLICITUD PORQUE YA SE ACEPTO</p>
+    <img src="https://cdn-icons-png.flaticon.com/256/1828/1828665.png"><br>
+    <p class="Tittle">Tu solicitud no puede ser cancelada debido a que ya ha sido acceptada. </p><br>
+    <a href="{% url 'core:vacaciones' %}" class="btn btn-primary w-100 py-2">Regresar</a>
     {% endif %}
   </div>
 </body>
