vacations implementation a medias

--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -91,7 +91,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:vacaciones' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/1831/1831534.png" alt="Vacaciones">
             <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR VACACIONES</span>
           </a>
