--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -98,7 +98,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="{% url 'RH:vacaciones' %}">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:vacaciones_busqueda' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/1831/1831534.png" alt="Vacaciones">
             <span style="margin-top: 5px; font-size: 1.2em; font-weight: bold;">ADMINISTRAR VACACIONES</span>
           </a>
