ADD and EDIT users desing

--- a/ADSAP/templates/RH/Empleados/crea_empleados2.html
+++ b/ADSAP/templates/RH/Empleados/crea_empleados2.html
@@ -1,24 +1,80 @@
 {% extends 'base/base.html'%}
-
-{% block title %} CREA EMPLEADOS {% endblock title %}
-
+{% load static %}
+{% block title %}Creación de empleado{% endblock title %}
 {% block content %}
+<style>
+  .background {
+    background-color: #fff;
+  }
 
-    <h1>CREACION DE EMPLEADOS - DATOS PERSONALES</h1>
-    
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 1000px;
+    border-radius: 20px;
+    margin-left: 300px;
+    display: block;
+    font-size: 1.2em;
+    font-family: 'ZCOOL QingKe HuangYou';
+  }
+
+  .Tittle {
+    font-size: 3em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .BtnRealizar {
+    background-color: #009c0d;
+    border-color: #009c0d;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+  }
+
+  .btn{
+    margin-top: 35px;
+  }
+
+  .BtnRealizar:hover {
+    background-color: #006909;
+    color: #fff;
+  }
+
+  .BtnCancelar {
+    background-color: red;
+    border-color: red;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+  }
+  .BtnCancelar:hover {
+    background-color: rgb(141, 0, 0);
+    color: #fff;
+  }
+</style>
+
+<body class="background">
+  <div class="Contenedor">
+    <p class="Tittle">Creación de usuario</p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-            
-            <div class="row">
-                <div class="col">
-                    <button type="submit" class="btn btn-outline-success form-control">Crea Empleado</button>
-                </div>
-                <div class="col">
-                    <a href="{% url 'RH:empleados' %}" class="btn btn-outline-warning form-control">Cancel</a>
-                </div>
+        <div class="row">
+            <div class="col">
+                <button type="submit" class="btn BtnRealizar form-control">Crear usuario</button>
             </div>
+            <div class="col">
+                <a href="{% url 'RH:empleados' %}" class="btn BtnCancelar form-control">Cancelar</a>
+            </div>
+        </div>
     </form>
-
-
+  </div>
+</body>
 {% endblock content %}
