--- a/ADSAP/templates/RH/Empleados/crea_empleados.html
+++ b/ADSAP/templates/RH/Empleados/crea_empleados.html
@@ -1,24 +1,104 @@
 {% extends 'base/base.html'%}
-
-{% block title %} CREA EMPLEADOS {% endblock title %}
-
+{% load static %}
+{% block title %}Creación de empleado{% endblock title %}
 {% block content %}
+<style>
+  .background {
+    background-color: #fff;
+  }
 
-    <h1>CREACION DE EMPLEADOS</h1>
-    
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 1000px;
+    border-radius: 20px;
+    margin-left: 300px;
+    display: block;
+  }
+
+  .Tittle {
+    font-size: 3em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  img {
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    width: 200px;
+    display: block;
+    padding-bottom: 30px;
+  }
+
+  .Texto {
+    font-size: 1.5em;
+    Font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    color: #003366;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  .Motivo {
+    font-size: 1.5em;
+    Font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    color: #003366;
+  }
+
+  .CampoFecha {
+    font-size: 1.2em;
+    Font-family: 'ZCOOL QingKe HuangYou';
+    color: black;
+  }
+
+  .CampoMotivo {
+    width: 950px;
+    margin-bottom: 15px;
+    font-size: 1.5em;
+    Font-family: 'ZCOOL QingKe HuangYou';
+  }
+
+  .btn {
+    background-color: #003366;
+    border-color: #003366;
+    font-size: 1.5em;
+    margin-bottom: 30px;
+  }
+
+  .BtnRealizar {
+    width: 950px;
+    background-color: #009c0d;
+    border-color: #009c0d;
+  }
+
+  .BtnRealizar:hover {
+    background-color: #006909;
+  }
+</style>
+
+<body class="background">
+  <div class="Contenedor">
+    <p class="Tittle">Creación de empleado</p>
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-            
-            <div class="row">
-                <div class="col">
-                    <button type="submit" class="btn btn-outline-success form-control">Crea Empleado</button>
-                </div>
-                <div class="col">
-                    <a href="{% url 'RH:empleados' %}" class="btn btn-outline-warning form-control">Cancel</a>
-                </div>
-            </div>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-outline-success form-control">Crear Empleado</button>
+        </div>
+        <div class="col">
+          <a href="{% url 'RH:empleados' %}" class="btn btn-outline-warning form-control">Cancelar</a>
+        </div>
+      </div>
     </form>
-
-
+  </div>
+</body>
 {% endblock content %}
