--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -106,7 +106,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:permisos_busqueda' %}">  
             <img src="https://cdn-icons-png.flaticon.com/256/2284/2284211.png" alt="Permisos">
             <span style="margin-top: 5px; font-size: 1.2em; font-weight: bold;">ADMINISTRAR PERMISOS</span>
           </a>
