--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -124,7 +124,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:noticias' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/2886/2886141.png" alt="Noticias">
             <span style="margin-top: 5px; font-size: 1.2em; font-weight: bold;">ADMINISTRAR NOTICIAS</span>
           </a>
